Fix Academic Experiences layout on Mobile2

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -113,3 +113,7 @@ tbody tr:nth-child(odd) th {
     white-space: normal;
   }
 }
+
+.nav-accent {
+  color: $nav-link-color;
+}
